Prevent horizontal scrolling on mobile

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -83,6 +83,18 @@ $blue : #5fa8dc;
 	box-shadow: 0px 0px 4px 0px #ccc;
 }
 
+body , html{
+
+	@include breakpoint(1000px) {
+
+		max-width: 100%;
+		overflow-x:hidden;
+
+	}
+
+}
+
+
 .green {
 	background-color: $green !important;
 }
